test/error/param_without_type.colgm
func check(a) -> i64 {
    return 0 + a;
}