test/error/param_without_type.result
Error: parameter has no type
  --> test/error/param_without_type.colgm:1:12
  | 
1 | func check(a) -> i64 {
  |            ^